# maximus

./: CMakeLists.txt  README.md
src/maximus/: CMakeLists.txt  main.cpp  scraper.cpp  scraper.hpp
src/maximus/parsers/: category_parser.hpp  product_parser.hpp
